product_docs/docs/postgis/3.1/01a_installing_postgis/installing_on_linux/x86_amd64/postgis_other_linux8_x86.mdx
---
navTitle: AlmaLinux 8 or Rocky Linux 8
title: Installing PostGIS on AlmaLinux 8 or Rocky Linux 8 x86_64
---

Before you begin the installation process, log in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

## Set up the repository

Setting up the repository is a one-time task. If you have already set up your repository, you do not need to perform this step. If you do need to set up the repository, you must register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

```shell
#  Set up the EDB repository:
dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm

#  Replace '<USERNAME>' and '<PASSWORD>' below with
#  your username and password for the EDB repository:
sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo

#  Install the EPEL repository:
dnf -y install epel-release

#  Enable additional repositories to resolve dependencies:
dnf config-manager --set-enabled PowerTools

#  Disable the built-in PostgreSQL module:
dnf -qy module disable postgresql
```

## Install the package

```shell
# If you are using EDB Postgres Advanced Server 13 or 14, use this format
# of the command:
apt-get install edb-as14-postgis32
# Where `14` is the version of EDB Postgres Advanced Server. Replace `14`
# with `13` if that is the version of EDB Postgres Advanced Server you
# are using.

# If you are using  EDB Postgres Advanced Server 11 or 12, use this format
# of the command:
apt-get install edb-as12-postgis-3.2

# Where `12` is the version of EDB Postgres Advanced Server. Replace `12`
# with `11` if that is the version of EDB Postgres Advanced Server you
# are using.
```
